meu_projeto/static/styles.css
/* ... */
@media (max-width: 500px) {
  .video-grid {
      display: grid;
      grid-template-columns: repeat(2, 1fr) !important;
      gap: 20px;
  }

  .episode-grid {
    display: grid;
    grid-template-columns: repeat(1, 1fr) !important;
    gap: 20px;
    margin-left: -3vh !important;
  }

  #video-frame {
    height: 20vh !important;
    width: 45vh !important;
    margin-top: 10vh !important;

  }
  
  .video-title {
    overflow: hidden;
    white-space: nowrap;
    text-overflow: ellipsis;
    font-weight: bold;
    margin-bottom: 5px;
    width: 50vh !important;
 }

 .channel-icon-largest {
  width: 20vh;
  height: 20vh;
  border-radius: 10vh;
  margin-top: 2vh;
  margin-right: 2vh;
  position: absolute;
  top: 20vh;
  left: 2vh !important;
}

.channel-title-largest {
  font-size: 5vh;
  color: #F1F1F1;
  position: absolute;
  left: 3vh !important;
  top: 45vh !important;
}

.channel-description {
  margin-top: 10vh !important;
}
}

.episode-grid {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  gap: 2vh;
  margin-left: 5vh;
  overflow: hidden;
}

.episode-grid-related {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  gap: 2vh;
  margin-left: 1vh;
}

#video-frame {
  height: 95vh;
  width: 180vh;
  margin-top: 1vh;
}

.video-list {
  white-space: nowrap;  /* Prevent wrapping to the next line */
  overflow-x: scroll;  /* Enable horizontal scrolling */
  display: flex;      /* Make child elements flex items for proper alignment */
  height: 30vh;
  padding-top: 10vh;
}

.text-overlay {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: rgba(0, 0, 0, 0.7);
  color: #F1F1F1;
  display: flex;
  align-items: center;
  justify-content: center;
  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
}

.text-overlay .logo-image {
  position: absolute;
  top: 40%;
  left: 25%;
  transform: translate(-50%, -50%);
  max-width: 40%;
  max-height: 40%;
  width: auto;
  height: auto;
}

.rating .material-symbols-outlined {
  margin-right: 10%;
}

.rating p {
  position: absolute;
  top: 70%;
  left: 25%;
  transform: translate(-50%, -50%);
  display: flex;
  align-items: center;
  justify-content: center;
}

.menu-icon {
  text-decoration: none;
}

.menu-icon span {
  vertical-align: text-bottom;
}

.menu-icon-two span {
  vertical-align: bottom;
}

.description {
 position: absolute;
 top: 60%;
 left: 70%;
 transform: translate(-50%, -50%);
 max-width: 40%;
 max-height: 40%;
 width: auto;
 height: auto;
 white-space: pre-line;
 text-align: justify;
}

.watch-button {
 position: absolute;
 top: 90%;
 left: 25%;
 transform: translate(-50%, -50%);
 max-width: 40%;
 max-height: 40%;
 width: auto;
 height: auto;
 white-space: pre-line;
}

.watch-button button {
 color: black;
 display: flex;
 align-items: center;
 justify-content: center;
}

/* Optional: Hide the horizontal scrollbar */
.video-list::-webkit-scrollbar {
  display: none;
}

.back-button {
  background-color: #4d4d4d;
  color: #F1F1F1;
 }

 .logo {
   width: 100px;
   height: 32px;
 }

 #a{
     position:fixed;
     top:0;
     left:0;
     width:224px;
     height:429px;
 }

 .random-video-wallpaper {
   position: relative;
   width: auto;
   height: 400px;
   overflow: hidden;
   margin-top: 0;
 }

 .wallpaper-image {
   width: 100%; /* Set the width of the image to 100% to stretch it */
   height: auto; /* Allow the height to adjust automatically */
 }

 .channel-wallpaper-image {
  width: 100%; /* Set the width of the image to 100% to stretch it */
  height: auto; /* Allow the height to adjust automatically */
  filter: brightness(50%);
}


 body {
   background-color: #0F0F0F;
 }

 p, h2, a, h3 {
   color: #F1F1F1;
   font-family: 'YouTube Sans', sans-serif;
 }

 /* Estilo da Barra Superior Personalizada */
 .custom-navbar {
   overflow: hidden;
   top: 0;
   z-index: 1000;
   position: absolute;
 }

 .custom-video-player {
    height: 100vmax;
 }

 /* Estilo do Título */
 #page-title {
   font-weight: bold; /* Fonte em negrito */
   color: #F1F1F1; /* Cinza escuro */
   font-family: 'Segoe UI';
 }

 /* Classe para Sombra 3D no Canto Inferior */
 .custom-shadow-button {
   position: relative;
   background-color: #f5f5f5; /* Cor de fundo da barra */
 }

 .custom-shadow-button {
   position: relative;
   background-color: #4d4d4d; /* Cor de fundo da barra */
 }

 .custom-shadow::before {
   content: '';
   position: absolute;
   bottom: -0px; /* Alterando para um valor negativo para posicionar a sombra acima */
   left: 0;
   width: 100%;
   height: 20px; /* Altura da sombra no canto inferior */
   background: linear-gradient(to top, rgba(0, 0, 0, 0.4) 0%, rgba(0, 0, 0, 0) 100%);
 }

 .my-container {
   padding: 2% 5% 5% 5%;
   height: 100vmax;
 }

 .movie-container {
   padding: 2% 5% 5% 5%;
 }

 .video-grid {
     display: grid;
     grid-template-columns: repeat(7, 1fr); /* 7 videos per row */
     gap: 20px;
 }

 .video-grid-search {
  display: grid;
  grid-template-columns: repeat(7, 1fr); /* 7 videos per row */
  gap: 20px;
  height: 100vmax;
}

 .video-card {
   border-radius: 0px;
   overflow: visible;
   width: 100%;
 }

.video-list-thumbnail img {
   width: 16vh;
   height: 25vh;
   object-fit: cover;
   overflow: hidden;
   border-radius: 5%;
   transition: transform 0.3s ease;
 }

 .video-list-thumbnail img:hover {
  transform: scale(1.1);
}

 .episode-list-thumbnail {
  width: 53vh !important;
  height: 30vh !important;
  border-radius: 2vh;
  transition: transform 0.3s ease;
  background-color: 0F0F0F;
  margin-bottom: 20vh;
}

.episode-image {
  width: 53vh !important;
  height: 31vh !important;
  border-radius: 2vh;
}

.episode-list-thumbnail:hover {
  transform: scale(1.1);
  background-color: 0F0F0F;
}

.episode-title {
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
  padding-top: 1.5vh;
  padding-left: 1.5vh;
  font-size: 2vh;
}
/* ... */

